--- a/python.md.html
+++ b/python.md.html
@@ -51,7 +51,8 @@ pip uninstall {pkg}               | uninstall package
 
 ### upgrade pip
 ~~~
-python -m pip install --upgrade pip
+python -m pip install --upgrade pip  (old)
+pip install --upgrade pip
 ~~~
 
 <meta name="keywords" content="*memo:prog.python.pip.freeze*">
