--- a/blender.md.html
+++ b/blender.md.html
@@ -7,36 +7,36 @@
 
 <meta name="keywords" content="*memo:blender.view*">
 # View
-key             | command
----             | ---
-Shift + M-Drag  | translation
-M-Drag          | rotation
-Wheel           | zoom
-L-Click         | select
-Shift + L-Click | multiple select
-L-Drag          | multiple select
+| key             | command         |
+| ---             | ---             |
+| Shift + M-Drag  | translation     |
+| M-Drag          | rotation        |
+| Wheel           | zoom            |
+| L-Click         | select          |
+| Shift + L-Click | multiple select |
+| L-Drag          | multiple select |
 
 <meta name="keywords" content="*memo:blender.object*">
 # Object Mode
-key              | command
----              | ---
-ESC              | cancel
-Tab              | object/edit mode
-Ctrl + z         | undo
-Shift + Ctrl + z | redo
-n                | toggle tool bar
-A                | open add menu
-a                | select all
-x                | delete
-D                | duplicate (same material)
-Ctrl + c         | copy (new material)
-Ctrl + v         | paste
-g[x,y,z]         | translate along x or y or z axis
-s[x,y,z]         | scale along x or y or z axis
-r[x,y,z]         | rotate along x or y or z axis
-g[X,Y,Z]         | translate except x or y or z axis
-s[X,Y,Z]         | scale except x or y or z axis
-r[X,Y,Z]         | rotate except x or y or z axis
+| key              | command                           |
+| ---              | ---                               |
+| ESC              | cancel                            |
+| Tab              | object/edit mode                  |
+| Ctrl + z         | undo                              |
+| Shift + Ctrl + z | redo                              |
+| n                | toggle tool bar                   |
+| A                | open add menu                     |
+| a                | select all                        |
+| x                | delete                            |
+| D                | duplicate (same material)         |
+| Ctrl + c         | copy (new material)               |
+| Ctrl + v         | paste                             |
+| g[x,y,z]         | translate along x or y or z axis  |
+| s[x,y,z]         | scale along x or y or z axis      |
+| r[x,y,z]         | rotate along x or y or z axis     |
+| g[X,Y,Z]         | translate except x or y or z axis |
+| s[X,Y,Z]         | scale except x or y or z axis     |
+| r[X,Y,Z]         | rotate except x or y or z axis    |
 
 ## Create Sphere
 - Add > Mesh > UV Sphere
@@ -59,13 +59,13 @@ r[X,Y,Z]         | rotate except x or y or z axis
 
 <meta name="keywords" content="*memo:blender.edit*">
 # Edit Mode
-mode     | key      | command
----      | ---      | ---
-         | Tab      | object/edit mode
-         | Ctrl + b | bevel
-bevel    | Wheel    | subdivision
-surface  | i        | insert
-surface  | e        | extrude
+| mode    | key      | command          |
+| ---     | ---      | ---              |
+|         | Tab      | object/edit mode |
+|         | Ctrl + b | bevel            |
+| bevel   | Wheel    | subdivision      |
+| surface | i        | insert           |
+| surface | e        | extrude          |
 
 ## split vertices
 - [面選択] > Mesh > Split > Selection
@@ -82,15 +82,15 @@ surface  | e        | extrude
 
 <meta name="keywords" content="*memo:blender.camera*">
 # Camera
-key         | command
----         | ---
-camera view | カメラアイコン, Num0, View > View Point > Camera
-g??         | translate in local axis
-gzz         | zoom in/out
-gZZ         | pan
-rxx         | pitch
-ryy         | yaw
-rzz         | roll
+| key         | command                                          |
+| ---         | ---                                              |
+| camera view | カメラアイコン, Num0, View > View Point > Camera |
+| g??         | translate in local axis                          |
+| gzz         | zoom in/out                                      |
+| gZZ         | pan                                              |
+| rxx         | pitch                                            |
+| ryy         | yaw                                              |
+| rzz         | roll                                             |
 
 ## カメラを移動
 - n > View > Camera to View
@@ -126,9 +126,9 @@ rzz         | roll
 - Hair Dynamics
 
 # Others
-key                  | command
----                  | ---
-F12                  | rendering
+| key | command   |
+| --- | ---       |
+| F12 | rendering |
 
 ## Quick Favorites
 - menu item 上で右クリック > Add to Quick Favorites
