--- a/vim.md.html
+++ b/vim.md.html
@@ -459,6 +459,7 @@ Command           | Description
 [count]dp         | :diffput
 :diffupdate       | update
 
+<meta name="keywords" content="*memo:vim.netrw*">
 ## netrw
 
 Command           | Description
