--- a/sh.md.html
+++ b/sh.md.html
@@ -263,18 +263,19 @@ endsw
 Commands
 =======================================================
 ## New Commands
-Traditional | New
----         | ---
--           | fzf
-cat         | bat (batcat)
-find        | fd (fdfind)
-grep        | rg (ripgrep)
-ls          | exa
-diff        | delta
--           | lazygit
-du          | ncdu
-top         | htop, btop
-ps          |
+
+| Traditional | New          |
+| ---         | ---          |
+| -           | fzf          |
+| cat         | bat (batcat) |
+| find        | fd (fdfind)  |
+| grep        | rg (ripgrep) |
+| ls          | exa          |
+| diff        | delta        |
+| -           | lazygit      |
+| du          | ncdu         |
+| top         | htop, btop   |
+| ps          |              |
 
 <meta name="keywords" content="*memo:sh.lazygit*">
 ## Lazygit
@@ -352,33 +353,46 @@ find . -name '*word*' -exec rm {} \; | remove matched files
 <meta name="keywords" content="*memo:sh.ripgrep*">
 ## rg (ripgrep)
 ~~~
-$ rg pattern [path...]
+$ rg [options] pattern [path...]
 ~~~
+
+| Option | Description    |
+| ---    | ---            |
+| -S     | smart case     |
+| -s     | case sensitive |
+| -i     | ignore case    |
+| -w     | word           |
+
+| Pattern | Description |
+| ---     | ---         |
+| \b      | boundary    |
+| BAR     | or          |
+| \-      | -           |
 
 <meta name="keywords" content="*memo:sh.fzf*">
 ## fzf
 
-Command     | Description             
----         | ---                     
-cmd **<TAB> | file completion         
-Ctrl-r      | history                 
-Ctrl-t      | print file and dir name 
-Alt-c       | cd                      
+| Command   | Description             |
+| ---       | ---                     |
+| cmd **TAB | file completion         |
+| Ctrl-r    | history                 |
+| Ctrl-t    | print file and dir name |
+| Alt-c     | cd                      |
 
 <meta name="keywords" content="*memo:sh.fzf.pattern*">
 ### Pattern
 
-Pattern       | Description        
----           | ---                
-str           | match str          
-'str          | exact match        
-^str          | start with str     
-str$          | end with str       
-!str          | not                
-!^str         | not start with str 
-!str$         | not end with str   
-str1 str2     | and                
-str1 `|` str2 | or                 
+| Pattern       | Description        |
+| ---           | ---                |
+| str           | match str          |
+| 'str          | exact match        |
+| ^str          | start with str     |
+| str$          | end with str       |
+| !str          | not                |
+| !^str         | not start with str |
+| !str$         | not end with str   |
+| str1 str2     | and                |
+| str1 BAR str2 | or                 |
 
 <meta name="keywords" content="*memo:sh.less*">
 ## less
