--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+<meta name="keywords" content="*memo:index*">
 <meta charset="utf-8">
 <title>Memo</title>
 <link rel="icon" href="images/icon.png" type="image/png" />
