--- a/setup.md.html
+++ b/setup.md.html
@@ -8,6 +8,8 @@
 <meta name="keywords" content="*memo:setup.wsl*">
 Setup WSL
 =======================================================
+## Setup proxy
+
 ## Clone env
 ~~~
 mkdir ~/MyRoaming
@@ -38,6 +40,7 @@ cd env
   1. create venv torch
   1. pip upgrade
   1. pip install vim
+1. node
 1. vim
   1. PlugUpgrade
   1. PlugInstall
@@ -49,6 +52,7 @@ cd env
 1. Visual Studio Code
 1. Visual Studio Community 2022
 1. Python 3.10
+1. Firefox
 1. PowerToys
 
 ## Install Windows Apps
