--- a/os_windows.md.html
+++ b/os_windows.md.html
@@ -91,30 +91,29 @@ choco list -l
 ## Shortcut
 - [Windows Keyboard Shortcut](https://support.microsoft.com/ja-jp/help/12445/windows-keyboard-shortcuts)
 
-Shortcut               | Description
------------------------|-------------------------------
-Ctrl + W               | ウィンドウを閉じる
-Alt + `                | 日本語入力 [英語キーボード]
-Alt + Tab              | ウィンドウを切り替える
-Windows + L            | 画面ロック
-Windows + D            | デスクトップを表示
-Windows + E            | エクスプローラーを開く
-Windows + Up           | ウィンドウの最大化
-Windows + Down         | ウィンドウの最小化
-Windows + Left         | ウィンドウを左半分に最大化
-Windows + Right        | ウィンドウを右半分に最大化
-Windows + Tab          | タスクビューを開く
-Windows + Ctrl + Left  | 左の仮想デスクトップへ移動
-Windows + Ctrl + Right | 右の仮想デスクトップへ移動
-Windows + Shift + S    | 範囲を指定してスクリーンショット
-Windows + PrintScreen  | 全画面をスクリーンショットして保存 (~/Pictures/スクリーンショット)
-Alt + PrintScreen      | アクティブなウィンドウをスクリーンショット (~/OneDrive/画像/スクリーンショット)
+| Shortcut                | Description                                                                     |
+| ----------------------- | -------------------------------                                                 |
+| Ctrl + w                | ウィンドウを閉じる                                                              |
+| Alt + `                 | 日本語入力 [英語キーボード]                                                     |
+| Alt + Tab               | ウィンドウを切り替える                                                          |
+| Windows + l             | 画面ロック                                                                      |
+| Windows + d             | デスクトップを表示                                                              |
+| Windows + e             | エクスプローラーを開く                                                          |
+| Windows + Up            | ウィンドウの最大化                                                              |
+| Windows + Down          | ウィンドウの最小化                                                              |
+| Windows + Left          | ウィンドウを左半分に最大化                                                      |
+| Windows + Right         | ウィンドウを右半分に最大化                                                      |
+| Windows + Tab           | タスクビューを開く                                                              |
+| Windows + Ctrl + Left   | 左の仮想デスクトップへ移動                                                      |
+| Windows + Ctrl + Right  | 右の仮想デスクトップへ移動                                                      |
+| Windows + Shift + s     | 範囲を指定してクリップボードにスクリーンショット                                |
+| Windows + PrintScreen   | 全画面をスクリーンショットして保存 (~/Pictures/スクリーンショット)              |
+| Alt + PrintScreen       | アクティブなウィンドウをスクリーンショット (~/OneDrive/画像/スクリーンショット) |
 
-### Windows + PrintScreenの保存先
-- ピクチャ/スクリーンショットを右クリック > プロパティ > 場所で指定
-
-### Alt + PrintScreenのOneDriveへの保存
-- OneDrive > 設定 > バックアップ > スクリーンショット
+- Windows + PrintScreenの保存先
+  - ピクチャ/スクリーンショットを右クリック > プロパティ > 場所で指定
+- Alt + PrintScreenのOneDriveへの保存
+  - OneDrive > 設定 > バックアップ > スクリーンショット
 
 <meta name="keywords" content="*memo:os.dos*">
 <meta name="keywords" content="*memo:os.bat*">
