--- a/lang.md.html
+++ b/lang.md.html
@@ -43,8 +43,8 @@ body {
 |         | )"                                                       | '''                  |                          | END                 |
 |         | ++,--                                                    |                      |                          |                     |
 |         | +=,-=,*=,/=                                              |                      |                          |                     |
-|         |                                                          |                      |                          |                     |
-|         |                                                          |                      |                          |                     |
+|         |                                                          |                      | eval                     |                     |
+|         |                                                          |                      | exec                     |                     |
 
 <meta name="keywords" content="*memo:lang.compare_lib*">
 ライブラリsyntax比較
