--- a/my.md.html
+++ b/my.md.html
@@ -5,6 +5,21 @@
 <meta name="keywords" content="*memo:my*">
 **My**
 
+Cheat sheet
+=======================================================
+| t, tx    | toggle win size |
+| I, N, T  | ide             |
+| Nv, Tv   | ide             |
+| GS, GV   | git             |
+| F, F2    | ferne           |
+| D        | open dir        |
+| f        | bmk             |
+| d        | fd              |
+| r        | rg              |
+| c        | cmd             |
+| g        | git             |
+| INS, DEL | tab             |
+
 Keymap
 =======================================================
 
